[gd_scene load_steps=3 format=3 uid="uid://b1c8d58s6fu1k"]

[ext_resource type="Script" uid="uid://co5bp3dj5t6m" path="res://DifficultyMenu.gd" id="1_diff"]
[ext_resource type="Script" uid="uid://6anl00e5dn6" path="res://SoundButton.gd" id="2_soundbtn"]

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_diff")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Select Difficulty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ApprendreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pour l'apprentissage"
horizontal_alignment = 1

[node name="EasyBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Easy"
script = ExtResource("2_soundbtn")

[node name="NormalBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Normal"
script = ExtResource("2_soundbtn")

[node name="HardBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Hard"
script = ExtResource("2_soundbtn")

[node name="HardcoreBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "HARDCORE"
script = ExtResource("2_soundbtn")

[node name="RenforcementLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pour le renforcement"
horizontal_alignment = 1

[node name="EndlessBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.19999999, 0.7866667, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Endless"
script = ExtResource("2_soundbtn")
